// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block with no props renders an unstyled div 1`] = `
<DocumentFragment>
  <div
    class="css-2zvch6"
  />
</DocumentFragment>
`;

exports[`Block with props renders as span 1`] = `
<DocumentFragment>
  <span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceInline020 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 8px 0 0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceStack020 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0 8px 0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
